--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "version": "1.4.0",
   "description": "Easy to use declarative transitions and animations for React Native",
   "typings": "typings/react-native-animatable.d.ts",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
     "jest": "./node_modules/.bin/jest",
     "jest:watch": "npm run jest -- --watch",
-    "lint": "./node_modules/.bin/eslint ./*.js",
+    "lint": "./node_modules/.bin/eslint ./*.{js,ts,tsx}",
     "test": "npm run lint && npm run jest",
-    "format": "./node_modules/.bin/prettier --write {,definitions/,__tests__/}*.js typings/*.d.ts"
+    "format": "./node_modules/.bin/prettier --write {,definitions/,__tests__/}*.{js,ts,tsx} typings/*.d.ts",
+    "check-dependencies": "rnx-align-deps",
+    "fix-dependencies": "rnx-align-deps --write"
   },
   "keywords": [
     "react-native",
@@ -55,6 +57,9 @@
     "@babel/core": "^7.20.0",
     "@babel/eslint-parser": "^7.22.15",
     "@babel/runtime": "^7.20.0",
+    "@types/jest": "^29.5.12",
+    "@types/react": "^18.2.55",
+    "@types/react-native": "^0.72.8",
     "eslint": "^8.2.0",
     "eslint-config-airbnb": "19.0.4",
     "eslint-config-prettier": "^9.0.0",
@@ -64,12 +69,37 @@
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "jest": "^29.7.0",
-    "metro-react-native-babel-preset": "0.76.8",
+    "metro-react-native-babel-preset": "0.77.0",
     "prettier": "^3.0.3",
     "react": "18.2.0",
-    "react-native": "0.72.6"
+    "react-native": "0.77.0",
+    "typescript": "^5.3.3"
   },
   "dependencies": {
     "prop-types": "^15.8.1"
+  },
+  "rnx-kit": {
+    "kitType": "library",
+    "alignDeps": {
+      "requirements": {
+        "development": [
+          "react-native@0.77"
+        ],
+        "production": [
+          "react-native@0.77"
+        ]
+      },
+      "capabilities": [
+        "core",
+        "core-android",
+        "core-ios",
+        "jest",
+        "react"
+      ]
+    }
+  },
+  "peerDependencies": {
+    "react": "18.3.1",
+    "react-native": "^0.77.0"
   }
 }
